fixed z-index menu

--- a/test/css/blocks/header.css
+++ b/test/css/blocks/header.css
@@ -13,7 +13,7 @@
     position: fixed;
     top: 30px;
     right: 20px;
-    z-index: 1;
+    z-index: 5;
 }
 .header__burger span {
     display: block;
@@ -56,7 +56,7 @@
     right: -100%;
     top: 0;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 0;
+    z-index: 4;
     transition: 0.5s all;
 }
 .nav-list_mobile_active {
